force-app/main/default/objects/Integration_Call_Default_Values__mdt/Integration_Call_Default_Values__mdt.object-meta.xml
<CustomObject>
    <description>enable to configure default values/properties for some integration calls (depends on the implementation)</description>
    <label>Integration Call Default Value</label>
    <pluralLabel>Integration Call Default Values</pluralLabel>
</CustomObject>