force-app/main/default/objects/Integration_Call_Default_Values__mdt/fields/API_Method__c.field-meta.xml
<CustomField>
    <fullName>API_Method__c</fullName>
    <description>for which API call the default value shall be set</description>
    <inlineHelpText>for which API call the default value shall be set</inlineHelpText>
    <label>API Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AutoIT-createCar</fullName>
                <default>true</default>
                <label>AutoIT-createCar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>