force-app/main/default/objects/Integration_Call_Default_Values__mdt/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <description>name of the property/field in the API</description>
    <inlineHelpText>name of the property/field in the API</inlineHelpText>
    <label>Property Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>